# prot-bert-finetune

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  prot-bert-finetune-lb-0-30.ipynb  pyproject.toml  submission.csv  submission_bert_5.csv
.dvc/: config
conf/: config.py  config.yaml
conf/data_loading/: data_loading.yaml
conf/debug/: debug.yaml
conf/infer/: infer.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
data/: all_train_data_v17.csv.dvc  demo_input.csv.dvc  sample_submission.csv.dvc  test.csv.dvc
outputs/best/: facebook-esm2_t33_650M_UR50D_fold0_best.ckpt.dvc  facebook-esm2_t33_650M_UR50D_fold0_best.pth.dvc  facebook-esm2_t33_650M_UR50D_fold1_best.ckpt.dvc  facebook-esm2_t33_650M_UR50D_fold1_best.pth.dvc  facebook-esm2_t33_650M_UR50D_fold2_best.ckpt.dvc  facebook-esm2_t33_650M_UR50D_fold2_best.pth.dvc  facebook-esm2_t33_650M_UR50D_fold3_best.ckpt.dvc  facebook-esm2_t33_650M_UR50D_fold3_best.pth.dvc  facebook-esm2_t33_650M_UR50D_fold4_best.ckpt.dvc  facebook-esm2_t33_650M_UR50D_fold4_best.pth.dvc
protein_stability/: dataset.py  model.py  pl_datamodule.py  pl_module.py  predict.py  train.py  train_pl.py  trainer.py
protein_stability/data/: dataset.py
protein_stability/infer/: predict.py
protein_stability/models/: losses.py  model.py
protein_stability/train/: callbacks.py  pl_datamodule.py  pl_module.py  train_pl.py
protein_stability/utils/: helpers.py
src/: dataset.py  helpers.py  losses.py  model.py  pl_datamodule.py  predict.py  preprocessing.py  train.py  train_pl.py  trainer.py  utils.py
