[project]
name = "prot-bert-finetune"
version = "0.1.0"
description = ""
authors = [
    {name = "kirill.morozov"}
]
readme = "README.md"
requires-python = "=3.11.9"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "onnx (>=1.19.0,<2.0.0)",
    "onnxruntime (>=1.22.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.21.3,<0.22.0)",
    "dvc (>=3.63.0,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "mlflow (>=3.3.2,<4.0.0)",
    "pytorch-lightning (==2.3.*)",
    "torchmetrics (>=1.8.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
pre-commit = "^4.3.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
dvc = {extras = ["gdrive"], version = "^3.63.0"}
cryptography = "<44"
pydrive2 = "1.21.3"
omegaconf = "^2.3.0"
